2024/03/07
- Added Abundance of the Water banner

2024/03/02
- Added editing character count

2024/02/29
- Updated banner images
- Added 37 banner
- Added 37

2024/02/27
- Added Lilya banner

2024/02/19
- Added multiple profiles

2024/02/13
- Added Ms. NewBabel banner

2024/01/31
- timekeeper.top :)

2024/01/29
- Added Shamane banner
- Added Medicine Pocket banner

2024/01/19
- Improved UI

2024/01/18
- Added Kaalaa Baunaa banner
- Changed Black Dwarf to Kaalaa Baunaa

2024/01/15
- Fixed beginner and Invitation from the Water
  pulls not showing
- Bug fixes
- Added Centurion banner

2024/01/12
- Added filter by damage type
- Fixed bug

2024/01/11
- Fixed link input
IM SORRY I BROKE THIS LAST WEEK AND DIDNT KNOW :(
- Added emote for import failure
- Added warning message for import backup

2024/01/10
- Hide beginner and golden thread pulls if empty

2024/01/09
- Fixed aliEn T image
- Fleshed out characters page
- Added character count data
- Added afflatus images
- Reworded export/import backup

2024/01/08
- Updated character data
- Added character images

2024/01/07
- Fixed The Ever-Flowing banner image

2024/01/03
- Added export/import data

2024/01/02
- Changed summon history data structure
- Added 50/50 win rate for 5*s

2023/12/31
- Fleshed out Settings page

2023/12/30
- Updated banner images
- Created Invitation From The Water section
- Created sidebar
- Created Settings and Characters pages
- Fixed directions for iOS

2023-12-29
- Created beginner banner section
- Changed Changeling to Jessica

2023-12-27
- Added filter by banner
- Added JSON as input

2023-12-26
- Updated auto import page

2023-12-25
- Added list of 6*s under banner stats

2023-12-24
- Added 50/50 win rate and guarantee

2023-12-22
- Added filter by rarity

2023-12-17
- Added show/hide banner history

2023-12-16
- Created banner history

2023-12-14
- Website created